--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,3 +2,10 @@
     /* margin-bottom: 0.5rem; */
     line-height: 1.2; /* Adjust the line height as needed */
 }
+.hover-effect {
+    transition: transform 0.3s ease;
+  }
+  
+  .hover-effect:hover {
+    transform: scale(1.1) rotate(2deg);
+  }
