--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,3 +16,42 @@
   .elem:hover {
     box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.344);
   }
+  /* #bottom{
+    height: 36vh;
+    width: 100%;
+     background-color: #f5f5f5; 
+    white-space: nowrap;
+    overflow-x: hidden;
+    gap: 2vw;
+    overflow-y: hidden;
+}
+/* #bottom img{
+    height: 100%;
+    width: 13%;
+    object-fit: cover;
+    /* display: none; */
+    /* border-radius: 50%;
+    object-position: top;
+    margin: 2vw;
+    gap: 2vw; }*/
+
+/* .elem{
+    
+    background-color: #f5f5f5; 
+    display: inline-block;
+    padding: 2vw; 
+    animation-name: anime;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;  
+  
+
+} 
+@keyframes anime{
+    from{
+        transform: translateX(0);
+    }
+    to{
+        transform: translateX(-100%);
+    }
+} */
